--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,315 @@
-.body__container{overflow:hidden;height:100vh}.body__container header{width:100%}.body__container header .header__top{background:#1B1A1F;display:flex;align-items:center;color:#C4C4C6;padding:2rem}.body__container header .header__top h1{margin-right:auto;font-weight:bold;letter-spacing:.1rem;text-shadow:0 0 .3rem white;font-size:2.4rem}.body__container header .header__top ul{display:flex}.body__container header .header__top ul *{font-size:1.2rem}.body__container header .header__top ul li:nth-child(1){position:relative;margin-right:1rem;color:#828186}.body__container header .header__top ul li:nth-child(1)::after{content:"|";display:inline-block;margin-left:1rem}.body__container header .header__top ul li:nth-child(2){color:red}.body__container header nav{background:black}.body__container header nav ul{display:grid;color:white;column-gap:.1rem;grid-template-columns:0.05fr repeat(6, 1fr) 8fr}.body__container header nav ul li{background:#393A3F}.body__container header nav ul li a{display:block;font-size:1.2rem;font-weight:bold;padding:1rem 0;text-align:center}.body__container main{display:grid;grid-template-columns:1fr 7fr;height:100%}.body__container main nav{padding:3rem 1rem}.body__container main nav ul li{margin-bottom:2rem;font-size:1.4rem}.body__container main section{display:flex;flex-direction:column;padding:1rem}.body__container main section .section__title{display:flex;font-weight:bold;font-size:1.6rem;margin-bottom:2rem}.body__container main section .section__sub-title{margin-bottom:2rem;font-size:1.4rem}.body__container main section .section__sub-title span:nth-child(1){margin-right:.5rem}.body__container main section .section__sub-title span:nth-child(1)::after{content:"|";display:inline-block;margin-left:.5rem;margin-bottom:.3rem}.body__container main section form{display:flex;align-items:center;margin-bottom:2rem}.body__container main section form *{border:.1rem solid #999;padding:.5rem}.body__container main section form input:nth-child(1){width:7rem;margin-right:.5rem}.body__container main section form button{padding:.33rem .5rem;margin-left:.5rem;background:#383B4F;color:white}.body__container main section section{background:gray}.body__container main section section button{width:10rem;background:#383B4F;color:white;padding:.3rem .5rem}.body__container main section section .grid-container{overflow:scroll}.body__container main section section .grid-container .grid-head{display:grid;grid-template-columns:1fr repeat(5, 3fr) repeat(7, 1fr) repeat(2, 2fr)}
+.body__container {
+  overflow: hidden;
+  height: 100vh;
+  width: 1920px;
+}
+
+.body__container header {
+  width: 100%;
+}
+
+.body__container header .header__top {
+  background: #1B1A1F;
+  display: flex;
+  align-items: center;
+  color: #C4C4C6;
+  padding: 2rem;
+}
+
+.body__container header .header__top h1 {
+  margin-right: auto;
+  font-weight: bold;
+  letter-spacing: .1rem;
+  text-shadow: 0 0 .3rem white;
+  font-size: 2.4rem;
+}
+
+.body__container header .header__top ul {
+  display: flex;
+}
+
+.body__container header .header__top ul * {
+  font-size: 1.2rem;
+}
+
+.body__container header .header__top ul li:nth-child(1) {
+  position: relative;
+  margin-right: 1rem;
+  color: #828186;
+}
+
+.body__container header .header__top ul li:nth-child(1)::after {
+  content: "|";
+  display: inline-block;
+  margin-left: 1rem;
+}
+
+.body__container header .header__top ul li:nth-child(2) {
+  color: red;
+}
+
+.body__container header nav {
+  background: black;
+}
+
+.body__container header nav ul {
+  display: grid;
+  color: white;
+  column-gap: .1rem;
+  grid-template-columns: 0.05fr repeat(6, 1fr) 8fr;
+}
+
+.body__container header nav ul li {
+  background: #393A3F;
+}
+
+.body__container header nav ul li a {
+  display: block;
+  font-size: 1.2rem;
+  font-weight: bold;
+  padding: 1rem 0;
+  text-align: center;
+}
+
+.body__container main {
+  display: grid;
+  grid-template-columns: 1fr 7fr;
+  height: 100%;
+}
+
+.body__container main nav {
+  padding: 3rem 1rem;
+}
+
+.body__container main nav ul li {
+  margin-bottom: 2rem;
+  font-size: 1.4rem;
+}
+
+.body__container main section {
+  display: flex;
+  flex-direction: column;
+  padding: 1rem;
+}
+
+.body__container main section .section__title {
+  display: flex;
+  font-weight: bold;
+  font-size: 1.6rem;
+  margin-bottom: 2rem;
+}
+
+.body__container main section .section__sub-title {
+  margin-bottom: 2rem;
+  font-size: 1.4rem;
+}
+
+.body__container main section .section__sub-title span:nth-child(1) {
+  margin-right: .5rem;
+}
+
+.body__container main section .section__sub-title span:nth-child(1)::after {
+  content: "|";
+  display: inline-block;
+  margin-left: .5rem;
+  margin-bottom: .3rem;
+}
+
+.body__container main section form {
+  display: flex;
+  align-items: center;
+  margin-bottom: 2rem;
+}
+
+.body__container main section form * {
+  border: .1rem solid #999;
+  padding: .5rem;
+}
+
+.body__container main section form input:nth-child(1) {
+  width: 7rem;
+  margin-right: .5rem;
+}
+
+.body__container main section form button {
+  padding: .33rem .5rem;
+  margin-left: .5rem;
+  background: #383B4F;
+  color: white;
+}
+
+.body__container main section section {
+  display: flex;
+  flex-direction: column;
+}
+
+.body__container main section section button {
+  width: 10rem;
+  background: #383B4F;
+  color: white;
+  padding: .8rem .5rem;
+  align-self: flex-end;
+  margin-bottom: 2rem;
+}
+
+.body__container main section section .grid-container {
+  overflow-y: scroll;
+  height: 60rem;
+  margin-bottom: 2rem;
+}
+
+.body__container main section section .grid-container .grid-head {
+  display: grid;
+  grid-template-columns: 1fr repeat(5, 3fr) repeat(7, 1fr) repeat(2, 2fr);
+  margin-bottom: .5rem;
+  justify-items: center;
+  align-items: center;
+}
+
+.body__container main section section .grid-container .grid-head li {
+  width: 100%;
+  height: 100%;
+  border: 1px solid gray;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.body__container main section section .grid-container .grid-item {
+  display: grid;
+  grid-template-columns: 1fr repeat(5, 3fr) repeat(7, 1fr) repeat(2, 2fr);
+  margin-bottom: .5rem;
+  justify-items: center;
+  align-items: center;
+}
+
+.body__container main section section .grid-container .grid-item li {
+  width: 100%;
+  height: 100%;
+  border: 1px solid gray;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: .1rem;
+  overflow: hidden;
+}
+
+.body__container main section section .grid-container .grid-item li:nth-child(1) {
+  width: 100%;
+}
+
+.body__container main section section .grid-container .grid-item li:nth-child(1) input {
+  width: 30px;
+}
+
+.body__container main section section .grid-container .grid-item li:nth-child(2) {
+  width: 100%;
+}
+
+.body__container main section section .grid-container .grid-item li:nth-child(2) input {
+  width: 160px;
+}
+
+.body__container main section section .grid-container .grid-item li:nth-child(3) {
+  width: 100%;
+}
+
+.body__container main section section .grid-container .grid-item li:nth-child(3) input {
+  width: 30px;
+}
+
+.body__container main section section .grid-container .grid-item li:nth-child(4) {
+  width: 100%;
+}
+
+.body__container main section section .grid-container .grid-item li:nth-child(4) input {
+  width: 160px;
+}
+
+.body__container main section section .grid-container .grid-item li:nth-child(5) {
+  width: 100%;
+}
+
+.body__container main section section .grid-container .grid-item li:nth-child(5) input {
+  width: 160px;
+}
+
+.body__container main section section .grid-container .grid-item li:nth-child(6) {
+  width: 100%;
+}
+
+.body__container main section section .grid-container .grid-item li:nth-child(6) input {
+  width: 160px;
+}
+
+.body__container main section section .grid-container .grid-item li:nth-child(7) {
+  width: 100%;
+}
+
+.body__container main section section .grid-container .grid-item li:nth-child(7) input {
+  width: 30px;
+}
+
+.body__container main section section .grid-container .grid-item li:nth-child(8) {
+  width: 100%;
+}
+
+.body__container main section section .grid-container .grid-item li:nth-child(8) input {
+  width: 30px;
+}
+
+.body__container main section section .grid-container .grid-item li:nth-child(9) {
+  width: 100%;
+}
+
+.body__container main section section .grid-container .grid-item li:nth-child(9) input {
+  width: 30px;
+}
+
+.body__container main section section .grid-container .grid-item li:nth-child(10) {
+  width: 100%;
+}
+
+.body__container main section section .grid-container .grid-item li:nth-child(10) input {
+  width: 30px;
+}
+
+.body__container main section section .grid-container .grid-item li:nth-child(11) {
+  width: 100%;
+}
+
+.body__container main section section .grid-container .grid-item li:nth-child(11) input {
+  width: 30px;
+}
+
+.body__container main section section .grid-container .grid-item li:nth-child(12) {
+  width: 100%;
+}
+
+.body__container main section section .grid-container .grid-item li:nth-child(12) input {
+  width: 30px;
+}
+
+.body__container main section section .grid-container .grid-item li:nth-child(13) {
+  width: 100%;
+}
+
+.body__container main section section .grid-container .grid-item li:nth-child(13) input {
+  width: 30px;
+}
+
+.body__container main section section .grid-container .grid-item li:nth-child(14) {
+  width: 100%;
+}
+
+.body__container main section section .grid-container .grid-item li:nth-child(14) input {
+  width: 100px;
+}
+
+.body__container main section section .grid-container .grid-item li:nth-child(15) {
+  width: 100%;
+}
+
+.body__container main section section .grid-container .grid-item li:nth-child(15) input {
+  width: 30px;
+}
